# LSM9DS1_RaspberryPi_CPP_Library

./: CMakeLists.txt  Doxyfile  LICENSE  LSM9DS1.cpp  LSM9DS1.h  LSM9DS1_Types.h  README.md  doxy.md  gpio-sysfs.cpp  gpio-sysfs.h
docs/: LSM9DS1_8h_source.html  LSM9DS1__Registers_8h_source.html  LSM9DS1__Types_8h_source.html  annotated.html  annotated_dup.js  classLSM9DS1-members.html  classLSM9DS1.html  classLSM9DS1.js  classLSM9DS1callback-members.html  classLSM9DS1callback.html  classLSM9DS1callback.js  classes.html  files.html  files_dup.js  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_vars.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js  structAccelSettings-members.html  structAccelSettings.html  structAccelSettings.js  structDeviceSettings-members.html  structDeviceSettings.html  structDeviceSettings.js  structGyroSettings-members.html  structGyroSettings.html  structGyroSettings.js  structLSM9DS1Sample-members.html  structLSM9DS1Sample.html  structLSM9DS1Sample.js  structMagSettings-members.html  structMagSettings.html  structMagSettings.js  structTemperatureSettings-members.html  structTemperatureSettings.html  (+1 more)
docs/pdf/: annotated.tex  classLSM9DS1.tex  classLSM9DS1callback.tex  index.tex  refman.tex  structAccelSettings.tex  structDeviceSettings.tex  structGyroSettings.tex  structLSM9DS1Sample.tex  structMagSettings.tex  structTemperatureSettings.tex
docs/rtf/: refman.rtf
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  (+44 more)
example/: CMakeLists.txt  LSM9DS1_demo.cpp  README.md
pcbs/: README
(+6 files in other folders)
